tests/negative/test_import_not_string.orb
import tests/io.orb;

fnc main() () {};